Created main styles

--- a/src/style.scss
+++ b/src/style.scss
@@ -8,3 +8,7 @@ vk.com
 
 @import "colors";
 @import "mixins";
+@import "styles/general";
+@import "styles/legacy";
+@import "styles/music";
+@import "styles/pay";
