Changed colors to appropriate ones

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -1,8 +1,9 @@
 //Change these variables to get another color set
-$bg-color: #060606;
-$font-color: #FFF;
-$font-color--reverse: #000;
-$accent-color: rgb(95, 183, 255);
-$accent-color--light: #AAA;
+$bg-color: #0f0f0f;
+$bg-color--light: #181818;
+$font-color: #b2bbb9;
+$font-color--dark: #8F8F93;
+$font-color--vk-dark: #56708C;
+$border-color: #1f1f1f;
 $accent-color--dark: #222;
 $border: none;
